# agent-prompt-dkb

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: auto-update.yml
agent_prompt_dkb/: __init__.py
config/: export_targets.yml  instance.yml  pack_definitions.yml  source_filter.yml
scripts/: auto_update.sh  build_packs.py  curate.py  export_claude_code.py  export_pack_summary.py  export_packs.py  export_skill_md.py  file_pipeline_common.py  import_catalog.py  import_from_store.py  release.py
storage/: sample-catalog.json
tests/: test_curate.py  test_export.py  test_file_pipeline.py  test_import.py
